--- a/index.html
+++ b/index.html
@@ -1,8 +1,14 @@
+<!doctype html>
+<html lang = "en">
 <html>
 <head>
 	<title> Meghan O'Brien </title>
+	<link href = "style.css" rel="stylesheet"/>
 </head>
 <body>
+	<h1>
+		Meghan O'Brien
+	</h1>
 	<p> Welcome to my personal website! </p>
 </body>
 </html>
