--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 	<h1>
 		Meghan O'Brien
 	</h1>
-	<p> Welcome to my personal website! </p>
+	<p> img src="me.jpg" alt="Photo of Meghan O'Brien" /></p>
+	<p> <a href="resume.html">Find my resume here: </a></p>
+	<p> <a href="bio.html"> Find my bio here: </a></p>
 </body>
 </html>
