--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 	<h1>
 		Meghan O'Brien
 	</h1>
-	<p> <img src="me.jpg" alt="Photo of Meghan O'Brien" /></p>
-	<p> <a href="resume.html">Find my resume here: </a></p>
-	<p> <a href="bio.html"> Find my bio here: </a></p>
+	<h2> <img src="me.jpg" alt="Photo of Meghan O'Brien" /></h2>
+	<h2> <a href="resume.html">Find my resume here: </a></h2>
+	<h2> <a href="bio.html"> Find my bio here: </a></h2>
 </body>
 </html>
