started adding info to bio and resume; added some new headings in stylesheet

--- a/resume.html
+++ b/resume.html
@@ -9,5 +9,14 @@
 	<h1>
 		Resume
 	</h1>
+	<h3> Education </h3>
+		<h4> Tufts University </h4>
+		<p>Expected graduation May 2019 </p>
+		<p> Expected Bachelor of Science degrees in Cognitive and Brain Science and Computer Science </p>
+	<h3> Professional Experience </h3>
+		<h4> Behavioral Health Partial Hospital Program </h4>
+		<p> Research intern; September - December 2018 </p>
+		<p> Collect and analyze data for an eyetracking study investigating attention, interpretation, and memory biases as predictors of suicidality, depression, and anxiety. </p>
+
 </body>
 </html>
