--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<h1>
 		Meghan O'Brien
 	</h1>
-	<h2> <img src="me.jpg" alt="Photo of Meghan O'Brien" /></h2>
+	<h2> <img src="me.jpg" width="480" height="320" alt="Photo of Meghan O'Brien" /></h2>
 	<h2> <a href="resume.html">Find my resume here: </a></h2>
 	<h2> <a href="bio.html"> Find my bio here: </a></h2>
 </body>
