added to resume, some more formatting

--- a/resume.html
+++ b/resume.html
@@ -11,12 +11,16 @@
 	</h1>
 	<h3> Education </h3>
 		<h4> Tufts University </h4>
-		<p>Expected graduation May 2019 </p>
-		<p> Expected Bachelor of Science degrees in Cognitive and Brain Science and Computer Science </p>
+		<p>Expected graduation May 2019 <br>
+		Expected Bachelor of Science degrees in Cognitive and Brain Science and Computer Science </p>
 	<h3> Professional Experience </h3>
-		<h4> Behavioral Health Partial Hospital Program </h4>
-		<p> Research intern; September - December 2018 </p>
-		<p> Collect and analyze data for an eyetracking study investigating attention, interpretation, and memory biases as predictors of suicidality, depression, and anxiety. </p>
+		<h4> Behavioral Health Partial Hospital Program <br>
+		McLean Hospital; September - December 2018 </h4>
+		<p> Research intern<br>
+		Collect and analyze data for an eyetracking study investigating attention, interpretation, and memory biases as predictors of suicidality, depression, and anxiety. </p>
+		<h4> Children's Personal Assistance Services and Support (PASS) Worker <br>
+		The Fogarty Center, Rhode Island; May - August 2018 </h4>
+		<p> Supported a teenage girl with developmental disabilities in achieving goals related to safety, socialization, and executive function </p>
 
 </body>
 </html>
