--- a/resume.html
+++ b/resume.html
@@ -15,11 +15,43 @@
 		Expected Bachelor of Science degrees in Cognitive and Brain Science and Computer Science </p>
 	<h3> Professional Experience </h3>
 		<h4> Research Intern at McLean Hospital; Behavioral Health Partial Hospital Program <br>
-		September - December 2018 </h4>
-		<p> Collect and analyze data for an eyetracking study investigating attention, interpretation, and memory biases as predictors of suicidality, depression, and anxiety. </p>
+		September 2018 - Present</h4>
+		<ul>
+			<li>Collect and analyze data for an eyetracking study investigating attention, interpretation, and memory biases as predictors of suicidality, depression, and anxiety. </li>
+		</ul>
 		<h4> Children's Personal Assistance Services and Support (PASS) Worker <br>
 		The Fogarty Center, Rhode Island; May - August 2018 </h4>
-		<p> Supported a teenage girl with developmental disabilities in achieving goals related to safety, socialization, and executive function </p>
-
+		<ul>
+			<li>Supported a teenage girl with developmental disabilities in achieving goals related to safety, socialization, and executive function. </li>
+		</ul>
+		<h4> Research Intern at Boston Children's Hospital; Neurodevelopmental Disorders Phenotyping Lab <br>
+		January - May 2018 </h4>
+		<ul>
+			<li>Administered and observed standardized behavioral assessments such as the DAS, ADOS, PPVT, EVT, and NEPSY, for children aged 3 months to 18 years with Autism Spectrum Disorder and related genetic disorders. </li>
+		</ul>
+		<h4> Customer Service Assistant at Tufts University Admissions<br>
+		September 2017 - Present </h4>
+		<ul>
+			<li>Greet prospective students and answer questions from visiting families, current students, faculty and staff. </li>
+		</ul>
+		<h4> Counselor at Camp Akeela<br>
+		June - August 2017 </h4>
+		<ul>
+				<li>Worked as a cabin counselor and theater specialist at a summer camp for children with AUtism Spectrum Disorders, Non-Verbal Learning Disorders, and other social difficulties for two 3.5-week overnight sessions. </li>
+				<li>Taught a drama class throughout the camp and wrote and directed two short plays. </li>
+		</ul>
+		<h4> Research Assistant at the Tufts Spatial Cognition Lab<br>
+		January - June 2017 </h4>
+		<ul>
+				<li>Analyzed data for an educational grant promoting the development of visuospatial thinking skills integral to STEM disciplines. </li>
+				<li>Collected and analyzed data for an eye tracking study involving spatial awareness</li>
+				<li>Presented posters at the Fenway Psychology Research Conference and the Tufts Undergraduate Research and Scholarship Symposium. </li>
+		</ul>
+		<h4> Research Assistant at the Tufts Integrative Cognitive Neuroscience Lab<br>
+		September 2016 - May 2017 </h4>
+		<ul>
+				<li>Collected and analyzed data for several studies investigating music and its effect on memory.</li>
+				<li>Collaborated with researchers and participants throughout the research process. </li>
+		</ul>
 </body>
 </html>
