added things to resume, added nicer formatting/colors

--- a/resume.html
+++ b/resume.html
@@ -10,9 +10,15 @@
 		Meghan O'Brien
 	</h1>
 	<h3> Education </h3>
-		<h4> Tufts University </h4>
+		<h4> Tufts University, Medford, MA </h4>
 		<p>Expected graduation May 2019 <br>
-		Expected Bachelor of Science degrees in Cognitive and Brain Science and Computer Science </p>
+		Expected Bachelor of Science degrees in Cognitive and Brain Science and Computer Science <br>
+		Cumulative GPA: 3.84</p>
+		<h4> Relevant Coursework </h4>
+		<p> Computer Science:<br>
+			Intro to Computer Science, Data Structures, Computation Theory, Algorithms, Machine Language and Structure, Developmental Robotics <br>
+			Cognitive and Brain Science:<br>
+			Intro to Cognitive and Brain Science, Statistics for Behavioral Sciences, Experimental Psychology, Intro to Linguistics, Perception, Language and Mind, Psychology of Music, Developmental Psychopathology and Adaptation, Abnormal Psychology, Exceptional Child, Intro to Cognitive Behavioral Therapy</p>
 	<h3> Professional Experience </h3>
 		<h4> Research Intern at McLean Hospital; Behavioral Health Partial Hospital Program <br>
 		September 2018 - Present</h4>
@@ -53,5 +59,16 @@
 				<li>Collected and analyzed data for several studies investigating music and its effect on memory.</li>
 				<li>Collaborated with researchers and participants throughout the research process. </li>
 		</ul>
+	<h3>Leadership Experience</h3>
+		<h4> Vice President of Tufts Enchanted A Cappella<br>
+		September 2015 - Present</h4>
+		<ul>
+			<li>Organize and oversee rehearsals, auditions, performances, and travel.</li>
+			<li>Projects have included a week-long trip to Orlando, FL, with a  performance in Walt Disney World and several local trips with performances around New England.</li>
+			<li>Rehearse 7 hours a week in addition to executive board meetings, performances, and professional recording ventures. </li>
+		</ul>
+	<h3>Skills and Interests </h3>
+		<p>Proficiency in Spanish, C++, C, SPSS, R, HTML, Microsoft Office; <br>Experience with eyetracking <br>
+		Interests in theater, music, working with children
 </body>
 </html>
