--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 	<h1>
 		Meghan O'Brien
 	</h1>
-	<h2> <img src="me.jpg" width="480" height="320" alt="Photo of Meghan O'Brien" /></h2>
-	<h2> <a href="resume.html">Find my resume here: </a></h2>
-	<h2> <a href="bio.html"> Find my bio here: </a></h2>
+	<h2> <img src="me.jpg" width="720" height="480" alt="Photo of Meghan O'Brien" /></h2>
+	<h2> <a href="resume.html">RESUME </a></h2>
+	<h2> <a href="bio.html"> BIOGRAPHY </a></h2>
 </body>
 </html>
