more formatting changes and updates to main page

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 <head>
 	<title> Meghan O'Brien </title>
-	<link href = "stylesheet.css" rel="stylesheet"/>
+	<link href = "mainpagestyle.css" rel="stylesheet"/>
 </head>
 <body>
 	<h1>
