made small changes to header formatting in resume and other formatting things

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<h1>
 		Meghan O'Brien
 	</h1>
-	<h2> <img src="me.jpg" width="720" height="480" alt="Photo of Meghan O'Brien" /></h2>
+	<h2> <img src="me.jpg" alt="Photo of Meghan O'Brien" /></h2>
 	<h2> <a href="resume.html">RESUME </a></h2>
 	<h2> <a href="bio.html"> BIOGRAPHY </a></h2>
 </body>
