--- a/resume.html
+++ b/resume.html
@@ -14,7 +14,7 @@
 			<p>Expected graduation May 2019 <br>
 				Expected Bachelor of Science degrees in Cognitive and Brain Science and Computer Science <br>
 				Cumulative GPA: 3.84</p>
-		<h4> Relevant Coursework </h4>
+		<h4> Relevant Coursework </h4><br>
 			<h5> Computer Science:</h5>
 				<p>Intro to Computer Science, Data Structures, Computation Theory, Algorithms, <br> Machine Language and Structure, Developmental Robotics </p>
 			<h5>Cognitive and Brain Science:</h5>
