--- a/resume.html
+++ b/resume.html
@@ -23,17 +23,17 @@
 		<h4> Research Intern at the Behavioral Health Partial Hospital Program </h4>
 			<h5>McLean Hospital, Belmont, MA <br> September 2018 - Present</h5>
 				<ul>
-					<li>Collect and analyze data for an eyetracking study investigating attention, interpretation, and memory biases <br> as predictors of suicidality, depression, and anxiety. </li>
+					<li>Collect and analyze data for an eyetracking study investigating attention, interpretation, and memory biases as predictors of suicidality, depression, and anxiety. </li>
 				</ul>
 		<h4> Children's Personal Assistance Services and Support (PASS) Worker </h4>
 			<h5>The Fogarty Center, RI <br> May - August 2018 </h5>
 				<ul>
-					<li>Supported a teenage girl with developmental disabilities in achieving goals <br> related to safety, socialization, and executive function. </li>
+					<li>Supported a teenage girl with developmental disabilities in achieving goals related to safety, socialization, and executive function. </li>
 				</ul>
 		<h4> Research Intern at the Neurodevelopmental Disorders Phenotyping Lab </h4>
 			<h5>Boston Children's Hospital, Boston, MA <br>January - May 2018 </h5>
 				<ul>
-					<li>Administered and observed standardized behavioral assessments such as the <br> DAS, ADOS, PPVT, EVT, and NEPSY, for children aged 3 months to 18 years <br> with Autism Spectrum Disorder and related genetic disorders. </li>
+					<li>Administered and observed standardized behavioral assessments such as the DAS, ADOS, PPVT, EVT, and NEPSY, for children aged 3 months to 18 years with Autism Spectrum Disorder and related genetic disorders. </li>
 				</ul>
 		<h4> Customer Service Assistant </h4>
 			<h5>Tufts University Admissions, Medford, MA <br> September 2017 - Present </h5>
@@ -43,15 +43,15 @@
 		<h4> Counselor at Camp Akeela</h4>
 			<h5>Thetford Center, VT <br> June - August 2017 </h5>
 				<ul>
-					<li>Worked as a cabin counselor and theater specialist at a summer camp for children with <br> Autism Spectrum Disorders, Non-Verbal Learning Disorders, and other social difficulties <br> for two 3.5-week overnight sessions. </li>
+					<li>Worked as a cabin counselor and theater specialist at a summer camp for children with Autism Spectrum Disorders, Non-Verbal Learning Disorders, and other social difficulties for two 3.5-week overnight sessions. </li>
 					<li>Taught a drama class throughout the camp and wrote and directed two short plays. </li>
 				</ul>
 		<h4> Research Assistant at the Tufts Spatial Cognition Lab</h4>
 			<h5> Medford, MA <br> January - June 2017 </h5>
 				<ul>
-					<li>Analyzed data for an educational grant promoting the development of visuospatial <br> thinking skills integral to STEM disciplines. </li>
+					<li>Analyzed data for an educational grant promoting the development of visuospatial thinking skills integral to STEM disciplines. </li>
 					<li>Collected and analyzed data for an eye tracking study involving spatial awareness</li>
-					<li>Presented posters at the Fenway Psychology Research Conference and the <br> Tufts Undergraduate Research and Scholarship Symposium. </li>
+					<li>Presented posters at the Fenway Psychology Research Conference and the Tufts Undergraduate Research and Scholarship Symposium. </li>
 				</ul>
 		<h4> Research Assistant at the Tufts Integrative Cognitive Neuroscience Lab</h4>
 			<h5>Medford, MA <br> September 2016 - May 2017 </h5>
@@ -64,7 +64,7 @@
 			<h5>September 2015 - Present</h5>
 				<ul>
 					<li>Organize and oversee rehearsals, auditions, performances, and travel.</li>
-					<li>Projects have included a week-long trip to Orlando, FL, with a  performance in Walt Disney World <br> and several local trips with performances 	around New England.</li>
+					<li>Projects have included a week-long trip to Orlando, FL, with a  performance in Walt Disney World and several local trips with performances 	around New England.</li>
 					<li>Rehearse 7 hours a week in addition to executive board meetings, performances, and professional recording ventures. </li>
 				</ul>
 	<h3>Skills and Interests </h3>
