--- a/resume.html
+++ b/resume.html
@@ -1,6 +1,5 @@
 <!doctype html>
 <html lang = "en">
-<html>
 <head>
 	<title> Resume </title>
 	<link href = "stylesheet.css" rel="stylesheet"/>
@@ -70,6 +69,6 @@
 	<h3>Skills and Interests </h3>
 		<p>Proficiency in Spanish, C++, C, SPSS, R, HTML, Microsoft Office; <br>Experience with eyetracking <br>
 		Interests in theater, music, working with children
-	<h4><a href="index.html">home </a>
+	<h4><a href="index.html">home </a></h4>
 </body>
 </html>
