fixed stupid things

--- a/resume.html
+++ b/resume.html
@@ -6,18 +6,18 @@
 </head>
 <body>
 	<h1>
-		Meghan O'br/ien
+		Meghan O'Brien
 	</h1>
 	<h3> Education </h3>
 		<h4> Tufts University, Medford, MA </h4>
 			<p>Expected graduation May 2019 <br/>
-				Expected Bachelor of Science degrees in Cognitive and br/ain Science and Computer Science <br/>
+				Expected Bachelor of Science degrees in Cognitive and Brain Science and Computer Science <br/>
 				Cumulative GPA: 3.84</p>
-		<h4> Relevant Coursework </h4><br//>
+		<h4> Relevant Coursework </h4><br/>
 			<h5> Computer Science:</h5>
 				<p>Intro to Computer Science, Data Structures, Computation Theory, Algorithms, <br/> Machine Language and Structure, Developmental Robotics </p>
-			<h5>Cognitive and br/ain Science:</h5>
-				<p>Intro to Cognitive and br/ain Science, Statistics for Behavioral Sciences, Experimental Psychology, Intro to Linguistics, Perception, <br/> Language and Mind, Psychology of Music, Developmental Psychopathology and Adaptation, Abnormal Psychology, <br/> Exceptional Child, Intro to Cognitive Behavioral Therapy</p>
+			<h5>Cognitive and Brain Science:</h5>
+				<p>Intro to Cognitive and Brain Science, Statistics for Behavioral Sciences, Experimental Psychology, Intro to Linguistics, Perception, <br/> Language and Mind, Psychology of Music, Developmental Psychopathology and Adaptation, Abnormal Psychology, <br/> Exceptional Child, Intro to Cognitive Behavioral Therapy</p>
 	<h3> Professional Experience </h3>
 		<h4> Research Intern at the Behavioral Health Partial Hospital Program </h4>
 			<h5>McLean Hospital, Belmont, MA <br/> September 2018 - Present</h5>
